; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_update_title_duration.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_update_title_duration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"title\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"title_duration\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"%02d:%02d:%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @update_title_duration to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_title_duration(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ghb_dict_get_int(i32 %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = call i32* @ghb_lookup_title(i32 %16, i32* %10)
  store i32* %17, i32** %11, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32* @GHB_WIDGET(i32 %20, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  store i32* %21, i32** %8, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @ghb_title_range_get_duration(i32 %24, i32* %25)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @ghb_break_duration(i32 %27, i32* %3, i32* %4, i32* %5)
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32* @g_strdup_printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32 %29, i32 %30, i32 %31)
  store i32* %32, i32** %7, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @GTK_LABEL(i32* %33)
  %35 = load i32*, i32** %7, align 8
  %36 = call i32 @gtk_label_set_text(i32 %34, i32* %35)
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @g_free(i32* %37)
  ret void
}

declare dso_local i32 @ghb_dict_get_int(i32, i8*) #1

declare dso_local i32* @ghb_lookup_title(i32, i32*) #1

declare dso_local i32* @GHB_WIDGET(i32, i8*) #1

declare dso_local i32 @ghb_title_range_get_duration(i32, i32*) #1

declare dso_local i32 @ghb_break_duration(i32, i32*, i32*, i32*) #1

declare dso_local i32* @g_strdup_printf(i8*, i32, i32, i32) #1

declare dso_local i32 @gtk_label_set_text(i32, i32*) #1

declare dso_local i32 @GTK_LABEL(i32*) #1

declare dso_local i32 @g_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
